correct alignment container

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 
 .hero-slider {
   position: relative;
-  width: 100vw;
+  width: 100%; 
   height: 33.33vw;
   overflow: hidden;
 }
@@ -286,7 +286,6 @@ body {
   .hero-slider .hide-mobile {
     display: none !important;
   }
-
 
   .hero-slider .slide {
     position: unset;
